--- a/game.css
+++ b/game.css
@@ -12,7 +12,7 @@ body {
   background-color: white;
   border: 5px solid grey;
   border-radius: 10px;
-  margin-top: 10%;
+  margin-top: 10% auto 0 auto;
   box-shadow: 0 0.0625em 0.1875em 0 rgba(0, 0, 0, 0.1), 0.4em 0.5em 0 -0.25em #f2f2f2, 0.4em 0.5em 0.1875em -0.25em rgba(0, 0, 0, 0.3), 0.8em 1em 0 -0.5em #e5e5e5, 0.8em 1em 0.1875em -0.5em rgba(0, 0, 0, 0.1);
 }
 
