--- a/game.css
+++ b/game.css
@@ -6,13 +6,18 @@ body {
   background-color: black;
 }
 
+.card-area {
+  text-align: center;
+  margin: 0 auto 0 auto;
+}
+
 .card {
   width: 300px;
   height: 300px;
   background-color: white;
   border: 5px solid grey;
   border-radius: 10px;
-  margin-top: 10% auto 0 auto;
+  margin: 10% auto 0 auto;
   box-shadow: 0 0.0625em 0.1875em 0 rgba(0, 0, 0, 0.1), 0.4em 0.5em 0 -0.25em #f2f2f2, 0.4em 0.5em 0.1875em -0.25em rgba(0, 0, 0, 0.3), 0.8em 1em 0 -0.5em #e5e5e5, 0.8em 1em 0.1875em -0.5em rgba(0, 0, 0, 0.1);
 }
 
